[gd_scene load_steps=6 format=3 uid="uid://bpbhrjopx6je0"]

[ext_resource type="Script" path="res://player.gd" id="1_a3iau"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gq1nt"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_1ivcs"]
size = Vector2(20, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hrn2h"]
size = Vector2(40, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7trq0"]

[node name="Player" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_a3iau")
is_right = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_gq1nt")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("PlaceholderTexture2D_1ivcs")

[node name="Attack" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0
input_pickable = false
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack"]
shape = SubResource("RectangleShape2D_hrn2h")
disabled = true

[node name="ColorRect" type="ColorRect" parent="Attack/CollisionShape2D"]
visible = false
offset_left = -20.5
offset_top = -10.0
offset_right = 19.5
offset_bottom = 10.0
color = Color(1, 1, 1, 0.454902)

[node name="Hitbox" type="Area2D" parent="Attack" groups=["Player"]]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack/Hitbox"]
shape = SubResource("RectangleShape2D_7trq0")

[node name="AtttackTime" type="Timer" parent="."]

[connection signal="area_entered" from="Attack/Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="AtttackTime" to="." method="_on_atttack_time_timeout"]
